correcting page download

--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
                 </a>
                 <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownAbout">
                   <a class="dropdown-item" href="#">Apresentações</a>
-                  <a class="dropdown-item" href="#">Manuais</a>
+                  <a class="dropdown-item" href="guide.html">Manuais</a>
                   <a class="dropdown-item" href="publications.html">Publicações</a>
                   <a class="dropdown-item" href="#">Videos</a>
                 </div>
@@ -165,7 +165,7 @@
             <p>A geração 4 da plataforma TerraMA2 foi totalmente reestruturada para ficar mais amigável, ágil, flexível e compatível com os padrões internacionais do mercado ditados pelo Open Geospatial Consortium – OGC, padrões ISO do geoprocessamento. Os principais avanços nessa nova versão são:</p>
 
             <ul>
-              <li><p>Armazenamento e acesso a dados geoespaciais nos padrões OGC SFS - Simple Feature Access e serviços web como WMS (Web Map Service), WCS (Web Coverage Service) e WFS (Web Feature Service);</p></li>
+              <li><p>Armazenamento e acesso a dados geoespaciais nos padrões OGC SFS - <a href="https://www.google.com.br/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwij8MCe4cjVAhXkx1QKHStrDaYQFggqMAA&url=http%3A%2F%2Fwww.opengeospatial.org%2Fstandards%2Fsfs&usg=AFQjCNEl3pQuE-ek23tRsudVhEZdjlzTmw">Simple Feature Access</a> e serviços web como WMS (Web Map Service), WCS (Web Coverage Service) e WFS (Web Feature Service);</p></li>
               <li><p>Capacidade para trabalhar com bases de dados distribuídas, tanto  para dados estáticos quanto dinâmicos;</p></li>
             </ul>               
           </div>
@@ -195,11 +195,11 @@
           <p>A operação da plataforma em salas de monitoramento ambiental (prefeituras, defesa civil, institutos de pesquisa ou empresas) requer três níveis de usuários, divididos em:</p>
 
           <ul>
-            <li><p>Administradores da Plataforma: São usuários que fazem a instalação, configuração e administração da plataforma. São responsáveis por definir onde serão criados os bancos de dados e a gerência dos serviços que ficarão automaticamente realizando as tarefas definidas pelos operadores do sistema construído. Usuário com este privilégio utiliza o módulo de administração web para gerenciar outros usuários, com ou sem privilégio de administrador, ou ainda projetos definidos pelo usuários</p></li>
-            <li><p>Operadores da Plataforma: Os operadores são usuários sem privilégio de administrador que também fazem no módulo de administração web, porém, apenas para gerenciar os projetos criados por estes usuários. Estes usuários farão uso dos serviços de coleta, análise e notificação previamente inicializados por um administrador para desenvolver seus projetos e dessa maneira criar um sistema de monitoramento, análise e alerta.</p></li>
-            <li><p>Clientes dos Alertas: São os usuários ou agentes que têm a competência para executar as ações preventivas para a diminuição de perdas no caso da ocorrência de um evento extremo. Estes terão acesso apenas ao módulo de monitoramento web para visualização dos dados e alertas em tempo real. Recebe ainda notificações por meio de email ou mensagens eletrônicas.</p></li>
+            <li><p><b>Administradores da Plataforma:</b> São usuários que fazem a instalação, configuração e administração da plataforma. São responsáveis por definir onde serão criados os bancos de dados e a gerência dos serviços que ficarão automaticamente realizando as tarefas definidas pelos operadores do sistema construído. Usuário com este privilégio utiliza o módulo de administração web para gerenciar outros usuários, com ou sem privilégio de administrador, ou ainda projetos definidos pelo usuários</p></li>
+            <li><p><b>Operadores da Plataforma:</b> Os operadores são usuários sem privilégio de administrador que também fazem no módulo de administração web, porém, apenas para gerenciar os projetos criados por estes usuários. Estes usuários farão uso dos serviços de coleta, análise e notificação previamente inicializados por um administrador para desenvolver seus projetos e dessa maneira criar um sistema de monitoramento, análise e alerta.</p></li>
+            <li><p><b>Clientes dos Alertas:</b> São os usuários ou agentes que têm a competência para executar as ações preventivas para a diminuição de perdas no caso da ocorrência de um evento extremo. Estes terão acesso apenas ao módulo de monitoramento web para visualização dos dados e alertas em tempo real. Recebe ainda notificações por meio de email ou mensagens eletrônicas.</p></li>
           </ul>
-          <p>NOTA: Esta divisão é apenas para fins de gestão em instituições que têm esta necessidade de fazer monitoramento. Em outras situações uma única pessoa pode exercer os três níveis como por exemplo, um pesquisador que deseja testar seus modelos de análise em um computador pessoal.</p>
+          <p><b>NOTA:</b> Esta divisão é apenas para fins de gestão em instituições que têm esta necessidade de fazer monitoramento. Em outras situações uma única pessoa pode exercer os três níveis como por exemplo, um pesquisador que deseja testar seus modelos de análise em um computador pessoal.</p>
    
       </div>
     </div>
