--- a/guide.html
+++ b/guide.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
   <meta property="creator.productor" content="http://estruturaorganizacional.dados.gov.br/id/unidade-organizacional/49020"/>
 
-  <title>TerraMA² · Contato</title>
+  <title>TerraMA² · Documentação</title>
   <link href="img/terrama2_logo_100dpi.png" rel="shortcut icon" type="image/vnd.microsoft.icon" />
 
   <!-- Bootstrap core CSS -->
@@ -37,7 +37,7 @@
         <div class="container">
 
           <!-- Logo -->
-          <a href="index.html" title="Home" data-toggle="tooltip" data-placement="right"><img src="img/terrama2_logo_100dpi.png" width="60" height="50" alt="logotipo do TerraMa2"></a>
+          <a href="index.html" title="Home" data-toggle="tooltip" data-placement="right"><img src="img/terrama2_logo_100dpi.png" width="60" height="50" alt="logotipo do terraMa2"></a>
 
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -57,7 +57,7 @@
                 </div>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="projects.html">Projetos</a>
+                <a class="nav-link" href="projects.html">Projetos</a>
               </li>
               <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="about.html" id="navbarDropdownProjects" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -104,86 +104,65 @@
       <div class="container">
 
         <!-- Page Heading/Breadcrumbs -->
-        <h1 class="mt-4 mb-3">Contato</h1>
+        <h1 class="mt-4 mb-3">Documentação
+          <small>TerraMA²</small>
+        </h1>
 
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
             <a href="index.html">Home</a>
           </li>
-          <li class="breadcrumb-item active">Contato</li>
+          <li class="breadcrumb-item active">Documentação</li>
         </ol>
 
-        <!-- Content Row -->
-        <div class="row">
-          <!-- Map Column -->
-          <div class="col-lg-12">
-            <h4>Localização</h4><br>
-            <!-- Embedded Google Map -->
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3666.992668957822!2d-45.8633627850288!3d-23.206937784860017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cc4b06accadc73%3A0xddb542b96e931e54!2sINPE+-+Instituto+Nacional+de+Pesquisas+Espaciais!5e0!3m2!1spt-BR!2sbr!4v1505241421568" width="1100" height="300" style="border:0" allowfullscreen></iframe>
+        <h4>Documentos do Usuário</h4>
+        <div class="bs-callout bs-callout-warning">
+          <p><a href="docs/download/manual_instalacao_terrama2_rc1.pdf" target="_blank">Manual de Instalação do TerraMA²</a><br>
+           <!-- <a href="docs/documentation/02_introducao_terrama2.pdf" target="_blank">Apresentação do Sistema</a> -->
+         </p>
+       </div>
 
+     <!-- Collapse -->
+      <div id="accordion" role="tablist">
+        <div class="card">
+          <div class="card-header" role="tab" id="headingOne">
+            <h5 class="mb-0">
+              <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                Logomarcas TerraMA²
+              </a>
+            </h5>
           </div>
-          <!-- Contact -->
-          <div class="col-lg-12"><br><br>
 
-            <h4>Utilize uma das opções para contato com a equipe do INPE e com outros usuários:</h4><br>
-            <h4>Lista de Discussão</h4><br>
-
-            <p>Utilize nossa lista de discussão:<br>  
-              Para se inscrever na lista veja <a href="http://listas.dpi.inpe.br/mailman/listinfo/terrama2-l" target="_blank">AQUI!</a><br>
-              Para enviar e-mail aos participantes da lista use: <a href="mailto:terrama2-l@dpi.inpe.br">terrama2-l@dpi.inpe.br</a></p>
-
-              <h4>Endereço de E-mail</h4><br>
-              <p>Para contato utilize o endereço:<br>
-                E-mail: <a href="mailto:terrama2@dpi.inpe.br">terrama2@dpi.inpe.br</a></p>
-
-              </div>
+          <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
+            <div class="card-body">
+              <a href="docs/logomarcas/terrama2_logo_100dpi.png" target="_blank">terrama2_logo_100dpi.png</a><br> 
+              <a href="docs/logomarcas/terrama2_logo_300dpi.png" target="_blank">terrama2_logo_300dpi.png</a><br>
+              <a href="docs/logomarcas/terrama2_logo_500dpi.png" target="_blank">terrama2_logo_500dpi.png</a><br>
+              <a href="docs/logomarcas/powerbyterrama2_logo0.png" target="_blank">powerbyterrama2_logo0.png</a><br>
+              <a href="docs/logomarcas/powerbyterrama2_logo1.png" target="_blank">powerbyterrama2_logo1.png</a><br>
+              <a href="docs/logomarcas/powerbyterrama2_logo2.png" target="_blank">powerbyterrama2_logo2.png</a><br>
+              <a href="docs/logomarcas/powerbyterrama2_logo3.png" target="_blank">powerbyterrama2_logo3.png</a><br>
+              <a href="docs/logomarcas/powerbyterrama2_logo4.png" target="_blank">powerbyterrama2_logo4.png</a><br>
+              <a href="docs/logomarcas/powerbyterrama2_logo5.png" target="_blank">powerbyterrama2_logo5.png</a><br>
+              <a href="docs/logomarcas/terrama2_logoexeng_100dpi.png" target="_blank">terrama2_logoexport_100dpi.png</a><br>
+              <a href="docs/logomarcas/terrama2_logoexeng_300dpi.png" target="_blank">terrama2_logoexport_300dpi.png</a><br>
+              <a href="docs/logomarcas/terrama2_logoexeng_500dpi.png" target="_blank">terrama2_logoexport_500dpi.png</a><br>
+              <a href="docs/logomarcas/terrama2_logoexport_100dpi.png" target="_blank">terrama2_logoexeng_100dpi.png</a><br>
+              <a href="docs/logomarcas/terrama2_logoexport_300dpi.png" target="_blank">terrama2_logoexeng_300dpi.png</a><br>
+              <a href="docs/logomarcas/terrama2_logoexport_500dpi.png" target="_blank">terrama2_logoexeng_500dpi.png</a><br>
+              <a href="docs/logomarcas/terrama2_logoexspan_100dpi.png" target="_blank">terrama2_logoexspan_100dpi.png</a><br>
+              <a href="docs/logomarcas/terrama2_logoexspan_300dpi.png" target="_blank">terrama2_logoexspan_300dpi.png</a><br>
+              <a href="docs/logomarcas/terrama2_logoexspan_500dpi.png" target="_blank">terrama2_logoexspan_500dpi.png</a><br>
             </div>
-            <!-- /.row -->
-
-            <!-- Contact Form -->
-            <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
-        <!--  <div class="row">
-        <div class="col-lg-12">
-          
-          <form name="sentMessage" id="contactForm" novalidate>
-            <div class="control-group form-group">
-              <div class="controls">
-                <label>Nome completo:</label>
-                <input type="text" class="form-control" id="name" required data-validation-required-message="Please enter your name.">
-                <p class="help-block"></p>
-              </div>
-            </div>
-            <div class="control-group form-group">
-              <div class="controls">
-                <label>Telefone:</label>
-                <input type="tel" class="form-control" id="phone" required data-validation-required-message="Please enter your phone number.">
-              </div>
-            </div> 
-            <div class="control-group form-group">
-              <div class="controls">
-                <label>E-mail:</label>
-                <input type="email" class="form-control" id="email" required data-validation-required-message="Please enter your email address.">
-              </div>
-            </div>
-            <div class="control-group form-group">
-              <div class="controls">
-                <label>Mensagem:</label>
-                <textarea rows="10" cols="100" class="form-control" id="message" required data-validation-required-message="Please enter your message" maxlength="999" style="resize:none"></textarea>
-              </div>
-            </div>
-            <div id="success"></div> -->
-            <!-- For success/fail messages -->
-           <!--  <button type="submit" class="btn btn-primary">Enviar</button>
-          </form>
+          </div>
         </div>
-
-      </div> -->
-      <!-- /.row -->
-
-    </div><br><br>
+      </div><br>
+    <!-- /.Collapse -->
+    </div>
     <!-- /.Container -->
 
-    <!-- Footer -->    
+    <!-- Footer -->
+
     <footer class="mainfooter">
       <div class="footer-top p-y-2">
         <div class="container-fluid">
@@ -267,13 +246,8 @@
     <script src="vendor/popper/popper.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
-    <!-- Contact form JavaScript -->
-    <!-- Do not edit these files! In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
-    <!-- <script src="js/jqBootstrapValidation.js"></script>
-     <script src="js/contact_me.js"></script>  -->
-
-     <!-- Script tooltip -->
-     <script>
+    <!-- Script tooltip -->
+    <script>
       $(document).ready(function(){
         $('[data-toggle="tooltip"]').tooltip();   
       });
