--- a/download.html
+++ b/download.html
@@ -80,7 +80,7 @@
               </a>
               <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownAbout">
                 <a class="dropdown-item" href="#">Apresentações</a>
-                <a class="dropdown-item" href="#">Manuais</a>
+                <a class="dropdown-item" href="guide.html">Manuais</a>
                 <a class="dropdown-item" href="publications.html">Publicações</a>
                 <a class="dropdown-item" href="#">Videos</a>
               </div>
