--- a/courses.html
+++ b/courses.html
@@ -57,7 +57,7 @@
                 </div>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="projects.html">Projetos</a>
+                <a class="nav-link" href="projects.html">Projetos</a>
               </li>
               <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="about.html" id="navbarDropdownProjects" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -79,7 +79,7 @@
                   Documentação
                 </a>
                 <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownAbout">
-                  <a class="dropdown-item" href="#">Apresentações</a>
+                  <a class="dropdown-item" href="presentation.html">Apresentações</a>
                   <a class="dropdown-item" href="guide.html">Manuais</a>
                   <a class="dropdown-item" href="publications.html">Publicações</a>
                   <a class="dropdown-item" href="#">Videos</a>
@@ -115,26 +115,41 @@
           <li class="breadcrumb-item active">Cursos</li>
         </ol>
 
-        <h4>Cursos de Treinamento</h4><br>
+        <h4>Cursos de Capacitação</h4><br>
 
-        <div class="jumbotron">
+        <!-- Collapse -->
+        <div class="mb-4" id="accordion" role="tablist" aria-multiselectable="true">
 
-          <h5>Curso TerraMA2Q</h5>
+          <div class="card">
+            <div class="card-header" role="tab" id="headingTwo">
+              <h5 class="mb-0">
+                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" id="historic">Curso TerraMA2Q</a>
+              </h5>
+            </div>
 
-          <p><b>Data:</b> 9 a 11 de outubro de 2017</p>
-          <p><b>Local:</b> INPE - SJC</p>
-          <p><b>Instrutores:</b> Eymar Lopes, Fabiano Morelli e Gilberto Queiroz</p>
-          <p>Dado UF <a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=download:ibge.zip">ibge.zip</a></p> 
+            <div id="collapseTwo" class="collapse show" role="tabpanel" aria-labelledby="headingTwo">
+              <div class="card-body">
 
-          <h5>Slides do Curso</h5>
-          <ul>
-            <li>Instalação da plataforma TerraMA2 <a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=docs:01_instalacao_terrama2.pdf" target="_blank">01_instalacao_terrama2.pdf</a></li>
-            <li>Apresentação da plataforma TerraMA2 <a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=docs:02_introducao_terrama2.pdf" target="_blank">02_introducao_terrama2.pdf</a></li>
-            <li>Analise <a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=docs:06_analise_terrama2.pdf" target="_blank">06_analise_terrama2.pdf</a></li>
-            <li>Operadores <a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=docs:operadores_terrama2.pdf" target="_blank">operadores_terrama2.pdf</a></li>
-          </ul> 
+                <p><b>Data:</b> 9 a 11 de outubro de 2017</p>
+                <p><b>Local:</b> INPE - SJC</p>
+                <p><b>Instrutores:</b> Eymar Lopes, Fabiano Morelli e Gilberto Queiroz</p>
+                <p>Dado UF <a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=download:ibge.zip">ibge.zip</a></p> 
 
+                <h5>Slides do Curso</h5>
+                <ul>
+                  <li>Instalação da plataforma TerraMA2 <a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=docs:01_instalacao_terrama2.pdf" target="_blank">01_instalacao_terrama2.pdf</a></li>
+                  <li>Apresentação da plataforma TerraMA2 <a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=docs:02_introducao_terrama2.pdf" target="_blank">02_introducao_terrama2.pdf</a></li>
+                  <li>Analise <a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=docs:06_analise_terrama2.pdf" target="_blank">06_analise_terrama2.pdf</a></li>
+                  <li>Operadores <a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=docs:operadores_terrama2.pdf" target="_blank">operadores_terrama2.pdf</a></li>
+                </ul> 
+                
+              </div>
+            </div>
+          </div>
         </div>
+        <!-- /.Collapse -->
+
+        
       </div>
       <!-- /.Container -->
 
