--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
                   Documentação
                 </a>
                 <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownAbout">
-                  <a class="dropdown-item" href="#">Apresentações</a>
+                  <a class="dropdown-item" href="presentation.html">Apresentações</a>
                   <a class="dropdown-item" href="guide.html">Manuais</a>
                   <a class="dropdown-item" href="publications.html">Publicações</a>
                   <a class="dropdown-item" href="#">Videos</a>
