--- a/download-v2.html
+++ b/download-v2.html
@@ -83,7 +83,7 @@
                 Documentação
               </a>
               <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownAbout">
-                <a class="dropdown-item" href="#">Apresentações</a>
+                <a class="dropdown-item" href="presentation.html">Apresentações</a>
                 <a class="dropdown-item" href="guide.html">Manuais</a>
                 <a class="dropdown-item" href="publications.html">Publicações</a>
                 <a class="dropdown-item" href="#">Videos</a>
@@ -122,6 +122,15 @@
     </div>
 
     <div class="container">
+
+      <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <p><strong>DICA IMPORTANTE:</strong> Solicitamos que faça inscrição em nossa <a href="http://listas.dpi.inpe.br/mailman/listinfo/terrama2-l" target="_blank">lista de discussão</a>. Este será o meio oficial de contato, relato de problemas, dúvidas e avisos em geral.</p>
+      </div>
+
+      
       <div class="jumbotron">
 
         <h5> Release 4.0 - RC2  | disponível (25/08/2017)</h5><br>
@@ -149,7 +158,7 @@
 
                       <a href="#linux"><img src="img/linux-icon.png" class="rounded mx-auto d-block" alt="..." width="300" height="210"></a>
                       
-                      <center><span> <a href=""></a>Outros downloads | <a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=download:linux:manual_instalacao_terrama2_rc2.txt.zip">Documentação</a> </span></center>
+                      <center><span> <a href=""></a>Outros downloads | <a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=download:linux:manual_instalacao_terrama2_rc2.txt.zip"><b>Documentação</b></a> </span></center>
                     </div>
                     <!-- /.linux -->
 
@@ -161,49 +170,8 @@
             </div>
           </div>
 
-        <!-- <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body">
-              <h4 class="card-title">Special title treatment</h4>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </div> -->
+        </div><br><br>
 
-      </div><br><br>
-
-     <!--  <div class="container">
-          <div class="col-md-auto">
-            <div class="card">
-              <div class="card-body">
-
-                <div class="container">
-                  <div class="row">
-                    <div class="col">
-                      <img src="img/linux-icon.png" class="rounded mx-auto d-block" alt="..." width="100" height="70">
-                    </div>
-                    <div class="col">
-                      <!-- <img src="img/linux-icon.png" class="rounded mx-auto d-block" alt="..." width="100" height="70"> -->
-                     <!--  <ul>
-                        <li>Versão Recomendada: <a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=download:linux:terrama2-4.0.0-rc2-linux-x64-ubuntu-16.04.deb">64bits </a></li>
-                        <li>Versão Corrente: <a href="">Y</a> </li>
-                      </ul>
-                    </div> -->
-                    <!-- <div class="col-sm">
-                      <img src="img/pdf-icon.png" class="rounded mx-auto d-block" alt="...">
-                    </div> -->
-        <!--           </div>
-                </div>
-              -->
-                <!-- <h4 class="card-title">Special title treatment</h4>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a> -->
-
-              <!-- </div>
-            </div>
-          </div>
-        </div>  -->
       </div>
     </div>
 
@@ -266,7 +234,7 @@
 
               <ul>
                 <li>
-                  Instalador do TerraMA² - Release 4.0 <a href="" title="Em Breve!"><b>64 bits</b></a>
+                  Download Release 4.0 <a href="" title="Em Breve!"><b>64 bits</b></a>
                 </li>
               </ul>
               <p><b>OBS :</b> Descomprima os arquivos transferidos antes de executar.</p>
@@ -293,7 +261,7 @@
         <div class="card">
           <div class="card-header" role="tab" id="headingThr">
             <h6 class="mb-0">
-              <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThr" aria-expanded="false" aria-controls="collapseThr" id="historic">Histórico de Versões</a>
+              <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThr" aria-expanded="true" aria-controls="collapseThr" id="historic">Histórico de Versões</a>
             </h5>
           </div>
 
