--- a/guide.html
+++ b/guide.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
   <meta property="creator.productor" content="http://estruturaorganizacional.dados.gov.br/id/unidade-organizacional/49020"/>
 
-  <title>TerraMA² · Documentação</title>
+  <title>TerraMA² · Manuais</title>
   <link href="img/terrama2_logo_100dpi.png" rel="shortcut icon" type="image/vnd.microsoft.icon" />
 
   <!-- Bootstrap core CSS -->
@@ -79,7 +79,7 @@
                   Documentação
                 </a>
                 <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownAbout">
-                  <a class="dropdown-item" href="#">Apresentações</a>
+                  <a class="dropdown-item" href="presentation.html">Apresentações</a>
                   <a class="dropdown-item" href="guide.html">Manuais</a>
                   <a class="dropdown-item" href="publications.html">Publicações</a>
                   <a class="dropdown-item" href="#">Videos</a>
@@ -104,7 +104,7 @@
       <div class="container">
 
         <!-- Page Heading/Breadcrumbs -->
-        <h1 class="mt-4 mb-3">Documentação
+        <h1 class="mt-4 mb-3">Manuais
           <small>TerraMA²</small>
         </h1>
 
@@ -112,146 +112,152 @@
           <li class="breadcrumb-item">
             <a href="index.html">Home</a>
           </li>
-          <li class="breadcrumb-item active">Documentação</li>
+          <li class="breadcrumb-item active">Manuais</li>
         </ol>
 
         <h4>Documentos do Usuário</h4>
         <div class="bs-callout bs-callout-warning">
-          <p><a href="docs/download/manual_instalacao_terrama2_rc1.pdf" target="_blank">Manual de Instalação do TerraMA²</a><br>
-           <!-- <a href="docs/documentation/02_introducao_terrama2.pdf" target="_blank">Apresentação do Sistema</a> -->
-         </p>
-       </div>
 
-     <!-- Collapse -->
-      <div id="accordion" role="tablist">
-        <div class="card">
-          <div class="card-header" role="tab" id="headingOne">
-            <h5 class="mb-0">
-              <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Logomarcas TerraMA²
-              </a>
-            </h5>
-          </div>
+          <h5>Linux</h5>
+            <ul>
+              <li><p><a href="docs/download/manual_instalacao_terrama2_rc1.pdf" target="_blank"><b>Manual de Instalação do TerraMA² - Release 4.0 RC1</b></a></p></li>
+              <li><p><a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=download:linux:manual_instalacao_terrama2_rc2.txt.zip" target="_blank"><b>Manual de Instalação do TerraMA² - Release 4.0 RC2</b></a></p></li>
+            </ul>
+          
+          <!-- <a href="docs/documentation/02_introducao_terrama2.pdf" target="_blank">Apresentação do Sistema</a> -->
+          
+        </div>
 
-          <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
-            <div class="card-body">
-              <a href="docs/logomarcas/terrama2_logo_100dpi.png" target="_blank">terrama2_logo_100dpi.png</a><br> 
-              <a href="docs/logomarcas/terrama2_logo_300dpi.png" target="_blank">terrama2_logo_300dpi.png</a><br>
-              <a href="docs/logomarcas/terrama2_logo_500dpi.png" target="_blank">terrama2_logo_500dpi.png</a><br>
-              <a href="docs/logomarcas/powerbyterrama2_logo0.png" target="_blank">powerbyterrama2_logo0.png</a><br>
-              <a href="docs/logomarcas/powerbyterrama2_logo1.png" target="_blank">powerbyterrama2_logo1.png</a><br>
-              <a href="docs/logomarcas/powerbyterrama2_logo2.png" target="_blank">powerbyterrama2_logo2.png</a><br>
-              <a href="docs/logomarcas/powerbyterrama2_logo3.png" target="_blank">powerbyterrama2_logo3.png</a><br>
-              <a href="docs/logomarcas/powerbyterrama2_logo4.png" target="_blank">powerbyterrama2_logo4.png</a><br>
-              <a href="docs/logomarcas/powerbyterrama2_logo5.png" target="_blank">powerbyterrama2_logo5.png</a><br>
-              <a href="docs/logomarcas/terrama2_logoexeng_100dpi.png" target="_blank">terrama2_logoexport_100dpi.png</a><br>
-              <a href="docs/logomarcas/terrama2_logoexeng_300dpi.png" target="_blank">terrama2_logoexport_300dpi.png</a><br>
-              <a href="docs/logomarcas/terrama2_logoexeng_500dpi.png" target="_blank">terrama2_logoexport_500dpi.png</a><br>
-              <a href="docs/logomarcas/terrama2_logoexport_100dpi.png" target="_blank">terrama2_logoexeng_100dpi.png</a><br>
-              <a href="docs/logomarcas/terrama2_logoexport_300dpi.png" target="_blank">terrama2_logoexeng_300dpi.png</a><br>
-              <a href="docs/logomarcas/terrama2_logoexport_500dpi.png" target="_blank">terrama2_logoexeng_500dpi.png</a><br>
-              <a href="docs/logomarcas/terrama2_logoexspan_100dpi.png" target="_blank">terrama2_logoexspan_100dpi.png</a><br>
-              <a href="docs/logomarcas/terrama2_logoexspan_300dpi.png" target="_blank">terrama2_logoexspan_300dpi.png</a><br>
-              <a href="docs/logomarcas/terrama2_logoexspan_500dpi.png" target="_blank">terrama2_logoexspan_500dpi.png</a><br>
+         <!-- Collapse -->
+         <div id="accordion" role="tablist">
+          <div class="card">
+            <div class="card-header" role="tab" id="headingOne">
+              <h5 class="mb-0">
+                <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  Logomarcas TerraMA²
+                </a>
+              </h5>
+            </div>
+
+            <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
+              <div class="card-body">
+                <a href="docs/logomarcas/terrama2_logo_100dpi.png" target="_blank">terrama2_logo_100dpi.png</a><br> 
+                <a href="docs/logomarcas/terrama2_logo_300dpi.png" target="_blank">terrama2_logo_300dpi.png</a><br>
+                <a href="docs/logomarcas/terrama2_logo_500dpi.png" target="_blank">terrama2_logo_500dpi.png</a><br>
+                <a href="docs/logomarcas/powerbyterrama2_logo0.png" target="_blank">powerbyterrama2_logo0.png</a><br>
+                <a href="docs/logomarcas/powerbyterrama2_logo1.png" target="_blank">powerbyterrama2_logo1.png</a><br>
+                <a href="docs/logomarcas/powerbyterrama2_logo2.png" target="_blank">powerbyterrama2_logo2.png</a><br>
+                <a href="docs/logomarcas/powerbyterrama2_logo3.png" target="_blank">powerbyterrama2_logo3.png</a><br>
+                <a href="docs/logomarcas/powerbyterrama2_logo4.png" target="_blank">powerbyterrama2_logo4.png</a><br>
+                <a href="docs/logomarcas/powerbyterrama2_logo5.png" target="_blank">powerbyterrama2_logo5.png</a><br>
+                <a href="docs/logomarcas/terrama2_logoexeng_100dpi.png" target="_blank">terrama2_logoexport_100dpi.png</a><br>
+                <a href="docs/logomarcas/terrama2_logoexeng_300dpi.png" target="_blank">terrama2_logoexport_300dpi.png</a><br>
+                <a href="docs/logomarcas/terrama2_logoexeng_500dpi.png" target="_blank">terrama2_logoexport_500dpi.png</a><br>
+                <a href="docs/logomarcas/terrama2_logoexport_100dpi.png" target="_blank">terrama2_logoexeng_100dpi.png</a><br>
+                <a href="docs/logomarcas/terrama2_logoexport_300dpi.png" target="_blank">terrama2_logoexeng_300dpi.png</a><br>
+                <a href="docs/logomarcas/terrama2_logoexport_500dpi.png" target="_blank">terrama2_logoexeng_500dpi.png</a><br>
+                <a href="docs/logomarcas/terrama2_logoexspan_100dpi.png" target="_blank">terrama2_logoexspan_100dpi.png</a><br>
+                <a href="docs/logomarcas/terrama2_logoexspan_300dpi.png" target="_blank">terrama2_logoexspan_300dpi.png</a><br>
+                <a href="docs/logomarcas/terrama2_logoexspan_500dpi.png" target="_blank">terrama2_logoexspan_500dpi.png</a><br>
+              </div>
             </div>
           </div>
-        </div>
-      </div><br>
-    <!-- /.Collapse -->
-    </div>
-    <!-- /.Container -->
-
-    <!-- Footer -->
-
-    <footer class="mainfooter">
-      <div class="footer-top p-y-2">
-        <div class="container-fluid">
-
-        </div>
+        </div><br>
+        <!-- /.Collapse -->
       </div>
-      <div class="footer-middle">
-        <div class="container">
-          <div class="row">
+      <!-- /.Container -->
 
-            <div class="col-6 col-md-4">
-              <!--Column1-->
-              <div class="footer-pad">
-                <h4>Sobre</h4>
-                <ul class="list-unstyled">
-                  <li><a href="#"></a></li>
-                  <li><a href="about.html">TerraMA²</a></li>
-                  <li><a href="team.html">Equipe</a></li>
-                  <li><a href="architecture.html">Arquitetura</a></li>
-                  <li><a href="contact.html">Contato</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-6 col-md-4">
-              <!--Column1-->
-              <div class="footer-pad">
-                <h4>Projetos</h4>
-                <ul class="list-unstyled">
-                  <li><a href="#"></a></li>
-                  <li><a href="projects.html">Projetos</a></li>
-                  <li><a href="#" data-toggle="tooltip" data-placement="left" title="Em Breve!">Estudos de Caso</a></li>
-                </ul>
-              </div>
+      <!-- Footer -->
 
-              <div class="footer-pad">
-                <ul class="list-unstyled">
-                  <li><a href="#"></a></li>
-                  <li><a href="download.html">Download</a></li>
-                  <li><a href="documentation.html">Documentação</a></li>
-                  <li><a href="courses.html">Cursos</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-6 col-md-4">
-              <!--Column1-->
-              <div class="footer-pad">
-                <h4>Endereço</h4>
+      <footer class="mainfooter">
+        <div class="footer-top p-y-2">
+          <div class="container-fluid">
 
-                <p>Avenida dos Astronautas, 1.758 Jardim da Granja CEP: 12227 010 São José dos Campos - SP</p>
-              </div>
-              <div class="footer-pad">
-                <div class="mx-auto" style="width: 200px;">
-                  <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt="Logotipo do INPE"></a>
+          </div>
+        </div>
+        <div class="footer-middle">
+          <div class="container">
+            <div class="row">
+
+              <div class="col-6 col-md-4">
+                <!--Column1-->
+                <div class="footer-pad">
+                  <h4>Sobre</h4>
+                  <ul class="list-unstyled">
+                    <li><a href="#"></a></li>
+                    <li><a href="about.html">TerraMA²</a></li>
+                    <li><a href="team.html">Equipe</a></li>
+                    <li><a href="architecture.html">Arquitetura</a></li>
+                    <li><a href="contact.html">Contato</a></li>
+                  </ul>
                 </div>
               </div>
-            </div>
-          </div> 
+              <div class="col-6 col-md-4">
+                <!--Column1-->
+                <div class="footer-pad">
+                  <h4>Projetos</h4>
+                  <ul class="list-unstyled">
+                    <li><a href="#"></a></li>
+                    <li><a href="projects.html">Projetos</a></li>
+                    <li><a href="#" data-toggle="tooltip" data-placement="left" title="Em Breve!">Estudos de Caso</a></li>
+                  </ul>
+                </div>
+
+                <div class="footer-pad">
+                  <ul class="list-unstyled">
+                    <li><a href="#"></a></li>
+                    <li><a href="download.html">Download</a></li>
+                    <li><a href="documentation.html">Documentação</a></li>
+                    <li><a href="courses.html">Cursos</a></li>
+                  </ul>
+                </div>
+              </div>
+              <div class="col-6 col-md-4">
+                <!--Column1-->
+                <div class="footer-pad">
+                  <h4>Endereço</h4>
+
+                  <p>Avenida dos Astronautas, 1.758 Jardim da Granja CEP: 12227 010 São José dos Campos - SP</p>
+                </div>
+                <div class="footer-pad">
+                  <div class="mx-auto" style="width: 200px;">
+                    <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt="Logotipo do INPE"></a>
+                  </div>
+                </div>
+              </div>
+            </div> 
+          </div>
+
         </div>
+        <div class="footer-bottom">
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-12">
+                <!--Footer Bottom-->
+                <p>&copy; Copyright 2017 TerraMA².  All rights reserved.</p>
 
-      </div>
-      <div class="footer-bottom">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12">
-              <!--Footer Bottom-->
-              <p>&copy; Copyright 2017 TerraMA².  All rights reserved.</p>
-
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </footer>
-    <!-- /.Footer -->
+      </footer>
+      <!-- /.Footer -->
 
-    <!-- Gov -->
-    <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
-    <!-- /.Gov -->
+      <!-- Gov -->
+      <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
+      <!-- /.Gov -->
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/popper/popper.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+      <!-- Bootstrap core JavaScript -->
+      <script src="vendor/jquery/jquery.min.js"></script>
+      <script src="vendor/popper/popper.min.js"></script>
+      <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
-    <!-- Script tooltip -->
-    <script>
-      $(document).ready(function(){
-        $('[data-toggle="tooltip"]').tooltip();   
-      });
-    </script>
+      <!-- Script tooltip -->
+      <script>
+        $(document).ready(function(){
+          $('[data-toggle="tooltip"]').tooltip();   
+        });
+      </script>
 
-  </body>
-  </html>
+    </body>
+    </html>
