--- a/architecture.html
+++ b/architecture.html
@@ -184,22 +184,27 @@
               <div class="col-6 col-md-4">
                 <!--Column1-->
                 <div class="footer-pad">
-                  <h4>Projetos</h4>
                   <ul class="list-unstyled">
                     <li><a href="#"></a></li>
                     <li><a href="projects.html">Projetos</a></li>
-                    <li><a href="#" data-toggle="tooltip" data-placement="left" title="Em Breve!">Estudos de Caso</a></li>
+                    <li><a href="download.html">Download</a></li>
+                    <!-- <li><a href="documentation.html">Documentação</a></li> -->
+                    <li><a href="courses.html">Cursos</a></li>
                   </ul>
                 </div>
 
                 <div class="footer-pad">
+                  <h4>Documentação</h4>
                   <ul class="list-unstyled">
                     <li><a href="#"></a></li>
-                    <li><a href="download.html">Download</a></li>
-                    <li><a href="documentation.html">Documentação</a></li>
-                    <li><a href="courses.html">Cursos</a></li>
+                    <li><a href="presentation.html">Apresentações</a></li>
+                    <li><a href="guide.html">Manuais</a></li>
+                    <li><a href="publications.html">Publicações</a></li>
+                    <li><a href="#">Videos</a></li>
                   </ul>
                 </div>
+
+                
               </div>
               <div class="col-6 col-md-4">
                 <!--Column1-->
@@ -210,7 +215,7 @@
                 </div>
                 <div class="footer-pad">
                   <div class="mx-auto" style="width: 200px;">
-                    <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt="Logotipo de INPE"></a>
+                    <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt="Logotipo do INPE"></a>
                   </div>
                 </div>
               </div>
@@ -224,7 +229,6 @@
               <div class="col-xs-12">
                 <!--Footer Bottom-->
                 <p>&copy; Copyright 2017 TerraMA².  All rights reserved.</p>
-
               </div>
             </div>
           </div>
