--- a/documentation.html
+++ b/documentation.html
@@ -57,7 +57,7 @@
                 </div>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="projects.html">Projetos</a>
+                <a class="nav-link" href="projects.html">Projetos</a>
               </li>
               <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="about.html" id="navbarDropdownProjects" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -248,22 +248,27 @@
                 <div class="col-6 col-md-4">
                   <!--Column1-->
                   <div class="footer-pad">
-                    <h4>Projetos</h4>
                     <ul class="list-unstyled">
                       <li><a href="#"></a></li>
                       <li><a href="projects.html">Projetos</a></li>
-                      <li><a href="#" data-toggle="tooltip" data-placement="left" title="Em Breve!">Estudos de Caso</a></li>
+                      <li><a href="download.html">Download</a></li>
+                      <!-- <li><a href="documentation.html">Documentação</a></li> -->
+                      <li><a href="courses.html">Cursos</a></li>
                     </ul>
                   </div>
 
                   <div class="footer-pad">
+                    <h4>Documentação</h4>
                     <ul class="list-unstyled">
                       <li><a href="#"></a></li>
-                      <li><a href="download.html">Download</a></li>
-                      <li><a href="documentation.html">Documentação</a></li>
-                      <li><a href="courses.html">Cursos</a></li>
+                      <li><a href="presentation.html">Apresentações</a></li>
+                      <li><a href="guide.html">Manuais</a></li>
+                      <li><a href="publications.html">Publicações</a></li>
+                      <li><a href="#">Videos</a></li>
                     </ul>
                   </div>
+
+                  
                 </div>
                 <div class="col-6 col-md-4">
                   <!--Column1-->
@@ -288,7 +293,6 @@
                 <div class="col-xs-12">
                   <!--Footer Bottom-->
                   <p>&copy; Copyright 2017 TerraMA².  All rights reserved.</p>
-
                 </div>
               </div>
             </div>
